--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,9 @@ margin: 0;
 padding: 0;
 font-family: 'Montserrat', sans-serif;
 }
+html {
+  scroll-behavior: smooth;
+}
 li, a, button{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 600;
@@ -167,6 +170,7 @@ button:hover{
 /* Projects section */
 .projects{
   background: #000;
+  padding: 20px;
 }
 .project-container {
   display: flex;
